# fisk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conda-env.yaml
.github/workflows/: bench.yaml
benchmarks/AMD EPYC 7763, Clang 18/: DuoHash.csv  bit_extract_blocks.csv  bit_extract_weights.csv  kmer_clark.csv  kmer_extract.csv  kmer_spaced_multi.csv  kmer_spaced_single.csv  log.txt  seq_enc.csv  sys_info.txt
benchmarks/AMD EPYC 7763, GCC 13/: DuoHash.csv  bit_extract_blocks.csv  bit_extract_weights.csv  kmer_clark.csv  kmer_extract.csv  kmer_spaced_multi.csv  kmer_spaced_single.csv  log.txt  seq_enc.csv  sys_info.txt
benchmarks/AMD EPYC 9684X, Clang 17/: DuoHash.csv  bit_extract_blocks.csv  bit_extract_weights.csv  kmer_clark.csv  kmer_extract.csv  kmer_spaced_multi.csv  kmer_spaced_single.csv  log.txt  seq_enc.csv  sys_info.txt
benchmarks/AMD EPYC 9684X, GCC 15/: DuoHash.csv  bit_extract_blocks.csv  bit_extract_weights.csv  kmer_clark.csv  kmer_extract.csv  kmer_spaced_multi.csv  kmer_spaced_single.csv  log.txt  seq_enc.csv  sys_info.txt
benchmarks/AMD Ryzen 7 Pro 4750U, Clang 17/: DuoHash.csv  bit_extract_blocks.csv  bit_extract_weights.csv  kmer_clark.csv  kmer_extract.csv  kmer_spaced_multi.csv  kmer_spaced_single.csv  log.txt  seq_enc.csv  sys_info.txt
benchmarks/AMD Ryzen 7 Pro 4750U, GCC 14/: DuoHash.csv  bit_extract_blocks.csv  bit_extract_weights.csv  kmer_clark.csv  kmer_extract.csv  kmer_spaced_multi.csv  kmer_spaced_single.csv  (+3 more)
plot/: collect.sh  collect_all.sh  plot_all_benchs.sh  plot_all_cpus.sh  plot_bars_per_cpu.py  plot_bit_extract_blocks.py  plot_bit_extract_weights.py  plot_case_summary.py  plot_common.py  plot_impl_summary.py  plot_kmer_extract.py  plot_kmer_spaced.py  plot_per_cpu.py  plot_pext.py  plot_pext_blocks.py  plot_pext_weights.py
src/: arg_parser.hpp  bench_bit_extract_blocks.hpp  bench_bit_extract_weights.hpp  bench_kmer_clark.hpp  bench_kmer_extract.hpp  bench_kmer_spaced.hpp  bench_kmer_spaced_multi.hpp  bench_kmer_spaced_single.hpp  bench_pext.hpp  bench_pext_blocks.hpp  bench_pext_weights.hpp  bench_seq_enc.hpp  bit_extract.hpp  bit_extract_adaptive.hpp  bit_extract_selector.hpp  bit_extract_simd.hpp  bit_extract_zp7.hpp  cpu_intrinsics.hpp  fs_utils.hpp  kmer_clark.hpp  kmer_extract.hpp  kmer_extract_simd.hpp  kmer_spaced.hpp  kmer_spaced_selector.hpp  kmer_spaced_simd.hpp  main.cpp  microbench.hpp  pext.hpp  pext_adaptive.hpp  pext_instlatx64.hpp  pext_zp7.hpp  seq_enc.cpp  seq_enc.hpp  sequence.hpp  sys_info.cpp  sys_info.hpp  utils.hpp
(+50 files in other folders)
